plugins {
    id 'java'
    id 'org.springframework.boot' version '3.4.5'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com'
version = '0.0.1-SNAPSHOT'
description = 'user-service'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    // 1. Thư viện Eureka Client (Đã sửa bỏ bản viết cứng)
    implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
    implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'

    // 2. SỬA: Dòng webmvc sai tên đổi thành spring-boot-starter-web
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.apache.poi:poi-ooxml:5.2.5'
    
    // Swagger UI
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.5'

    // 3. XÓA dòng 'spring-boot-h2console' bị sai đi (vì bản thân h2 starter bên dưới đã tự kích hoạt h2-console rồi)

    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    compileOnly 'org.projectlombok:lombok'
    runtimeOnly 'com.h2database:h2'
    runtimeOnly 'org.postgresql:postgresql'
    annotationProcessor 'org.projectlombok:lombok'

    // Bỏ Security & JWT vì user-service không cần tự chặn nữa (Gateway đã lo việc đó)

    // TSID & Hibernate Utils/
    implementation 'com.github.f4b6a3:tsid-creator:5.2.6'
    implementation 'io.hypersistence:hypersistence-utils-hibernate-63:3.9.0'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testCompileOnly 'org.projectlombok:lombok'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    testAnnotationProcessor 'org.projectlombok:lombok'
}

tasks.named('test') {
    useJUnitPlatform()
}

ext {
    set('springCloudVersion', "2024.0.0") // Bản Spring Cloud phù hợp cho thế hệ Spring Boot mới
}

dependencyManagement {
    imports {
        mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
    }
}
